--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -4,3 +4,39 @@
 @import"../utillities/extend";
 
 /*estilos del index*/
+.mainindex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    .mainindex__sec1 {
+        position: absolute;
+        top: 5.6rem;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+
+        .mainindex__sec1__video {
+            width: 100%;
+        }
+    }
+
+    .mainindex__sec2 {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        z-index: 2;
+        height: 40rem;
+        margin-bottom: 6rem;
+        p {
+            background: -webkit-linear-gradient(nth($colores, 3), nth($colores, 8));
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: $medida-1 + 0.25rem;
+        }
+    }
+}
