--- a/sass/secundarios/_mediaquerie.scss
+++ b/sass/secundarios/_mediaquerie.scss
@@ -3,6 +3,7 @@
 @import"../utillities/extend";
 @import"../utillities/mixin";
 @import"../utillities/listas";
+
 /* estilos de la mediaquerie */
 @media screen and (min-width:600px) {
 
@@ -22,10 +23,12 @@
     .body main h1 {
         font-size: $medida-2 + $medida-3;
     }
+
     /*estilos del nav*/
-    #a{
+    #a {
         font-size: $medida-1;
     }
+
     .body header nav {
         height: 5.8rem;
     }
@@ -34,107 +37,207 @@
     .contenedorindex__logo {
         display: none;
     }
-    
-    .mainindex {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        .mainindex__sec1 {
-            position: absolute;
-            top: 5.6rem;
-            left: 0;
-            z-index: 1;
-            width: 100%;
-    
-            .mainindex__sec1__video {
-                width: 100%;
-            }
+
+    .mainindex__sec3 {
+        h1 {
+            text-align: center;
+            padding: $medida-1;
+            text-align: center;
+            margin: 3rem;
+            font-size: 4.5rem;
+            text-decoration: underline nth($colores, 5);
+            font-family: Tiemann, serif
         }
-    
-        .mainindex__sec2 {
-            position: relative;
+
+        .mainindex__sec3__contenedorpro {
             display: flex;
-            flex-direction: column;
             justify-content: center;
-            align-items: center;
-            width: 100%;
-            z-index: 2;
-            height: 40rem;
-            margin-bottom: 6rem;
+            flex-flow: row nowrap;
+        }
+
+        .mainindex__sec3__contenedorpro__hijo {
+            @include margen(0rem $medida-1, $medida-1 0rem);
+            width: auto;
+            text-align: center;
+            border: 0.3rem solid nth($colores, 7);
+            border-radius: $medida-3;
+            overflow: auto;
+            transition: 1s;
+            margin-top: $medida-2;
+
             p {
-                background: -webkit-linear-gradient(nth($colores, 3), nth($colores, 8));
-                background-clip: text;
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-                font-size: $medida-1 + 0.25rem;
+                font-weight: bold;
+                font-size: $medida-1 + $medida-3;
+                padding-bottom: $medida-1;
+                line-height: $medida-2;
+                font-size: $medida-1 + 0.125rem;
+
+                .s1 {
+                    text-decoration: line-through;
+                    opacity: 50%;
+                }
+            }
+
+            &:hover {
+                transform: scale(1.08);
+            }
+
+            img {
+                @include sizes(66.6%, 12.5rem)
+            }
+
+            span {
+                padding: $medida-3;
+                line-height: $medida-2;
+                font-size: $medida-1 + 0.125rem;
             }
         }
-        .mainindex__sec3 {
-            h1 {
-                text-align: center;
-                padding: $medida-1;
-                text-align: center;
-                margin: 3rem;
-                font-size: 4.5rem;
-                text-decoration: underline nth($colores, 5);
-                font-family: Tiemann, serif
-            }
-            .mainindex__sec3__contenedorpro {
-                display: flex;
-                justify-content: center;
-                flex-flow: row nowrap;
-            }
-            .mainindex__sec3__contenedorpro__hijo {
-                @include margen(0rem $medida-1, $medida-1 0rem);
-                width: auto;
-                text-align: center;
-                border: 0.3rem solid nth($colores, 7);
+
+        .mainindex__sec3__boton {
+            display: flex;
+            justify-content: center;
+            margin-top: $medida-2 * 1.2;
+            font-size: $medida-1 + $medida-3;
+            transition: 1s;
+            margin-bottom: -$medida-2 * 1.5;
+
+            button {
+                border: 0.3rem solid nth($colores, 2);
+                background-color: nth($colores, 3);
                 border-radius: $medida-3;
-                overflow: auto;
                 transition: 1s;
-                margin-top: $medida-2;
-    
-                p {
-                    font-weight: bold;
-                    font-size: $medida-1 + $medida-3;
-                    padding-bottom: $medida-1;
-                    line-height: $medida-2;
-                    font-size: $medida-1 + 0.125rem;
-    
-                    .s1 {
-                        text-decoration: line-through;
-                        opacity: 50%;
-                    }
-                }
+
                 &:hover {
                     transform: scale(1.08);
                 }
-                img {
-                    @include sizes(66.6%, 12.5rem)
-                }
-                span {
-                    padding: $medida-3;
-                    line-height: $medida-2;
-                    font-size: $medida-1 + 0.125rem;
-                }
             }
-            .mainindex__sec3__boton {
-                display: flex;
-                justify-content: center;
-                margin-top: $medida-2 * 1.2;
-                font-size: $medida-1 + $medida-3;
+
+            a {
+                display: inline-block;
+                padding: $medida-1;
+                text-decoration: none;
+                color: nth($colores, 2);
+                letter-spacing: 0.15rem;
+                font-weight: bold;
+                border: 0.3rem solid nth($colores, 7);
+            }
+        }
+
+        .mainindex__sec3__contenedorpro__hijo {
+            width: 33.3%;
+        }
+    }
+
+    hr {
+        margin: 0;
+        margin-top: 8rem;
+    }
+
+    .mainindex__sec4 {
+        margin-top: $medida-2 * 3;
+        width: 95%;
+        margin-bottom: 6rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h2 {
+            text-align: center;
+            font-size: 4.25rem;
+            text-decoration: underline nth($colores, 5);
+            font-family: Tiemann, serif
+        }
+
+        .mainindex__sec4__div1 {
+            margin-top: 7rem;
+            width: 85%;
+            display: grid;
+            grid-template-columns: 42.5% 30% 32.5%;
+            grid-template-areas:
+                "img h2 b"
+                "img p b";
+            @extend %grid2;
+
+            p {
+                text-align: left;
+                line-height: $medida-2;
+                font-size: $medida-1 + 0.125rem;
+            }
+
+            h3 {
+                text-align: left;
+                font-size: $medida-2 * 1.15;
+                text-decoration: underline nth($colores, 5);
+                font-family: Tiemann, serif;
+            }
+        }
+
+        .mainindex__sec4__div2 {
+            width: 80%;
+            display: grid;
+            grid-template-columns: 32.5% 25% 42.5%;
+            grid-template-areas:
+                "b h2 img"
+                "b p img";
+            @extend %grid2;
+
+            p {
+                text-align: right;
+                line-height: $medida-2;
+                font-size: $medida-1 + 0.125rem;
+            }
+
+            h3 {
+                text-align: right;
+                font-size: $medida-2 * 1.15;
+                text-decoration: underline nth($colores, 5);
+                font-family: Tiemann, serif;
+            }
+
+            margin-top: 13rem;
+        }
+
+        .mainindex__sec4__div3 {
+            width: 85%;
+            display: grid;
+            grid-template-columns: 42.5% 30% 32.5%;
+            grid-template-areas:
+                "img h2 b"
+                "img p b";
+            @extend %grid2;
+            margin-top: 13rem;
+
+            p {
+                text-align: left;
+                line-height: $medida-2;
+                font-size: $medida-1 + 0.125rem;
+            }
+
+            h3 {
+                text-align: left;
+                font-size: $medida-2 * 1.15;
+                text-decoration: underline nth($colores, 5);
+                font-family: Tiemann, serif;
+            }
+        }
+
+        .mainindex__sec4__boton {
+            display: flex;
+            justify-content: center;
+            margin-top: 6rem;
+            font-size: $medida-1 + $medida-3;
+            transition: 1s;
+
+            button {
+                border: 0.3rem solid nth($colores, 2);
+                background-color: nth($colores, 3);
+                border-radius: $medida-3;
                 transition: 1s;
-                margin-bottom: -$medida-2 * 1.5;
-                button {
-                    border: 0.3rem solid nth($colores, 2);
-                    border-radius: $medida-3;
-                    transition: 1s;
-    
-                    &:hover {
-                        transform: scale(1.08);
-                    }
+
+                &:hover {
+                    transform: scale(1.08);
                 }
+
                 a {
                     display: inline-block;
                     padding: $medida-1;
@@ -145,126 +248,15 @@
                     border: 0.3rem solid nth($colores, 7);
                 }
             }
-            .mainindex__sec3__contenedorpro__hijo {
-                width: 33.3%;
-            }
-        }
-        hr {
-            margin: 0;
-            margin-top: 8rem;
-        }
-        .mainindex__sec4 {
-            margin-top: $medida-2 * 3;
-            width: 95%;
-            margin-bottom: 6rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            h2 {
-                text-align: center;
-                font-size: 4.25rem;
-                text-decoration: underline nth($colores, 5);
-                font-family: Tiemann, serif
-            }
-            .mainindex__sec4__div1 {
-                margin-top: 8rem;
-                width: 85%;
-                display: grid;
-                grid-template-columns: 42.5% 30% 32.5%;
-                grid-template-areas:
-                    "img h2 b"
-                    "img p b";
-                @extend %grid2;
-                p {
-                    text-align: left;
-                    line-height: $medida-2;
-                    font-size: $medida-1 + 0.125rem;
-                }
-                h3 {
-                    text-align: left;
-                    font-size: $medida-2 * 1.15;
-                    text-decoration: underline nth($colores, 5);
-                    font-family: Tiemann, serif;
-                }
-            }
-            .mainindex__sec4__div2 {
-                width: 80%;
-                display: grid;
-                grid-template-columns: 32.5% 25% 42.5%;
-                grid-template-areas:
-                    "b h2 img"
-                    "b p img";
-                @extend %grid2;
-                p {
-                    text-align: right;
-                    line-height: $medida-2;
-                    font-size: $medida-1 + 0.125rem;
-                }
-    
-                h3 {
-                    text-align: right;
-                    font-size: $medida-2 * 1.15;
-                    text-decoration: underline nth($colores, 5);
-                    font-family: Tiemann, serif;
-                }
-                margin-top: 15rem;
-            }
-    
-            .mainindex__sec4__div3 {
-                width: 85%;
-                display: grid;
-                grid-template-columns: 42.5% 30% 32.5%;
-                grid-template-areas:
-                    "img h2 b"
-                    "img p b";
-                @extend %grid2;
-                margin-top: 15rem;
-    
-                p {
-                    text-align: left;
-                    line-height: $medida-2;
-                    font-size: $medida-1 + 0.125rem;
-                }
-    
-                h3 {
-                    text-align: left;
-                    font-size: $medida-2 * 1.15;
-                    text-decoration: underline nth($colores, 5);
-                    font-family: Tiemann, serif;
-                }
-            }
-            .mainindex__sec4__boton {
-                display: flex;
-                justify-content: center;
-                margin-top: 6rem;
-                font-size: $medida-1 + $medida-3;
-                transition: 1s;
-                button {
-                    border: 0.3rem solid nth($colores, 2);
-                    border-radius: $medida-3;
-                    transition: 1s;
-    
-                    &:hover {
-                        transform: scale(1.08);
-                    }
-                    a {
-                        display: inline-block;
-                        padding: $medida-1;
-                        text-decoration: none;
-                        color: nth($colores, 2);
-                        letter-spacing: 0.15rem;
-                        font-weight: bold;
-                        border: 0.3rem solid nth($colores, 7);
-                    }
-                }
-            }
         }
     }
+
     /*estilos de nos*/
-    .contenedornos{
+    .contenedornos {
         flex-direction: row-reverse;
         margin: $medida-2;
-        .contenedornos__div{
+
+        .contenedornos__div {
             padding: $medida-1;
             text-align: center;
             display: flex;
@@ -272,11 +264,13 @@
             justify-content: space-evenly;
             margin-bottom: $medida-2;
         }
-        .contenedornos__div__h1{
+
+        .contenedornos__div__h1 {
             padding-top: $medida-2 * 1.7;
             font-size: $medida-2 + $medida-3;
         }
-        .contenedornos__div__p1{
+
+        .contenedornos__div__p1 {
             display: inline;
         }
     }
