mejorado del nava agregandole iconos y cambiandolo a unom desplegable

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 576px) {
   .mainindex__sec4 .mainindex__sec4__div1, .mainindex__sec4 .mainindex__sec4__div2, .mainindex__sec4 .mainindex__sec4__div3 {
     row-gap: 1rem;
     margin-bottom: 2rem;
@@ -39,7 +39,7 @@
     .main .main__caja div {
       margin: 2rem; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 576px) {
   .mainindex__sec4 .mainindex__sec4__div1, .mainindex__sec4 .mainindex__sec4__div2, .mainindex__sec4 .mainindex__sec4__div3 {
     row-gap: 1rem;
     margin-bottom: 2rem;
@@ -84,7 +84,7 @@
   .contenedorpro__hijo span {
     padding: 0.5rem; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 576px) {
   .mainindex__sec4 .mainindex__sec4__div1, .mainindex__sec4 .mainindex__sec4__div2, .mainindex__sec4 .mainindex__sec4__div3 {
     row-gap: 1rem;
     margin-bottom: 2rem;
@@ -109,21 +109,42 @@
   text-transform: uppercase; }
   .body header nav .boton {
     background-color: #319fe7;
-    width: 2rem;
-    height: 1rem;
-    border: 2px solid #0f496d; }
-  .body header nav ul li {
+    width: 3rem;
+    height: 2rem;
+    border: 4px solid #bad9e5; }
+    .body header nav .boton:active {
+      transform: scale(1.2); }
+    .body header nav .boton img {
+      width: 2rem;
+      height: 1rem;
+      margin-bottom: 0.15rem; }
+  .body header nav .desk li {
     font-weight: bold;
     padding: 1rem;
     transition: 1s; }
-    .body header nav ul li:hover {
+    .body header nav .desk li:hover {
       text-decoration: underline;
       transform: scale(1.2); }
-    .body header nav ul li #a {
+    .body header nav .desk li #a {
       color: #dff6ff; }
   .body header nav div a img {
     width: 8rem;
     height: 4rem; }
+  .body header nav .buscbot {
+    background-color: #47b5ff; }
+    .body header nav .buscbot .buscbot__phone li {
+      font-weight: bold;
+      padding: 0.5rem;
+      transition: 1s; }
+      .body header nav .buscbot .buscbot__phone li:hover {
+        text-decoration: underline;
+        transform: scale(1.2); }
+      .body header nav .buscbot .buscbot__phone li #a {
+        color: #dff6ff; }
+        .body header nav .buscbot .buscbot__phone li #a img {
+          width: 2rem;
+          height: 2rem;
+          margin-right: 0.5rem; }
 
 /* estilo del footer */
 .footer {
@@ -144,7 +165,7 @@
     .footer div a {
       margin: 0.5rem; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 576px) {
   .mainindex__sec4 .mainindex__sec4__div1, .mainindex__sec4 .mainindex__sec4__div2, .mainindex__sec4 .mainindex__sec4__div3 {
     row-gap: 1rem;
     margin-bottom: 2rem;
@@ -183,7 +204,7 @@
     align-items: center;
     width: 100%;
     z-index: 2;
-    height: 40rem;
+    height: 28rem;
     margin-bottom: 6rem; }
     .mainindex .mainindex__sec2 p {
       background: -webkit-linear-gradient(#dff6ff, white);
@@ -192,7 +213,7 @@
       -webkit-text-fill-color: transparent;
       font-size: 1.25rem; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 576px) {
   .mainindex__sec4 .mainindex__sec4__div1, .mainindex__sec4 .mainindex__sec4__div2, .mainindex__sec4 .mainindex__sec4__div3 {
     row-gap: 1rem;
     margin-bottom: 2rem;
@@ -227,7 +248,7 @@
   .contenedornos .contenedornos__div__p1 {
     display: none; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 576px) {
   .mainindex__sec4 .mainindex__sec4__div1, .mainindex__sec4 .mainindex__sec4__div2, .mainindex__sec4 .mainindex__sec4__div3 {
     row-gap: 1rem;
     margin-bottom: 2rem;
@@ -245,7 +266,7 @@
       grid-area: b; } }
 
 /* estilos de la mediaquerie */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 576px) {
   /* estilos de sedes*/
   /* estilos de Productos de mediaquerie*/
   .contenedorpro {
@@ -253,81 +274,82 @@
     flex-flow: row nowrap; }
   .contenedorpro__hijo {
     width: 33.3%; }
-  /* estilos del h1 */
-  .body main h1 {
-    font-size: 2.5rem; }
   /*estilos del nav*/
   #a {
     font-size: 1rem; }
   .body header nav {
     height: 5.8rem; }
+  .boton {
+    display: none; }
   /*estilos de index*/
   .contenedorindex__logo {
     display: none; }
-  .mainindex__sec3 h1 {
-    text-align: center;
-    padding: 1rem;
-    text-align: center;
-    margin: 3rem;
-    font-size: 4.5rem;
-    text-decoration: underline #319fe7;
-    font-family: Tiemann, serif; }
-  .mainindex__sec3 .mainindex__sec3__contenedorpro {
-    display: flex;
-    justify-content: center;
-    flex-flow: row nowrap; }
-  .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
-    padding: 1rem 0rem;
-    margin: 0rem 1rem;
-    width: auto;
-    text-align: center;
-    border: 0.3rem solid #bad9e5;
-    border-radius: 0.5rem;
-    overflow: auto;
-    transition: 1s;
-    margin-top: 2rem; }
-    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p {
-      font-weight: bold;
-      font-size: 1.5rem;
-      padding-bottom: 1rem;
-      line-height: 2rem;
-      font-size: 1.125rem; }
-      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p .s1 {
-        text-decoration: line-through;
-        opacity: 50%; }
-    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo:hover {
-      transform: scale(1.08); }
-    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo img {
-      width: 66.6%;
-      height: 12.5rem; }
-    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo span {
-      padding: 0.5rem;
-      line-height: 2rem;
-      font-size: 1.125rem; }
-  .mainindex__sec3 .mainindex__sec3__boton {
-    display: flex;
-    justify-content: center;
-    margin-top: 2.4rem;
-    font-size: 1.5rem;
-    transition: 1s;
-    margin-bottom: -3rem; }
-    .mainindex__sec3 .mainindex__sec3__boton button {
-      border: 0.3rem solid #06283d;
-      background-color: #dff6ff;
-      border-radius: 0.5rem;
-      transition: 1s; }
-      .mainindex__sec3 .mainindex__sec3__boton button:hover {
-        transform: scale(1.08); }
-    .mainindex__sec3 .mainindex__sec3__boton a {
-      display: inline-block;
+  .mainindex__sec3 {
+    margin-top: 6rem; }
+    .mainindex__sec3 h1 {
+      text-align: center;
       padding: 1rem;
-      text-decoration: none;
-      color: #06283d;
-      letter-spacing: 0.15rem;
-      font-weight: bold;
-      border: 0.3rem solid #bad9e5; }
-  .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
-    width: 33.3%; }
+      text-align: center;
+      margin: 3rem;
+      font-size: 4.5rem;
+      text-decoration: underline #319fe7;
+      font-family: Tiemann, serif; }
+    .mainindex__sec3 .mainindex__sec3__contenedorpro {
+      display: flex;
+      justify-content: center;
+      flex-flow: row nowrap; }
+    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
+      padding: 1rem 0rem;
+      margin: 0rem 1rem;
+      width: auto;
+      text-align: center;
+      border: 0.3rem solid #bad9e5;
+      border-radius: 0.5rem;
+      overflow: auto;
+      transition: 1s;
+      margin-top: 2rem; }
+      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p {
+        font-weight: bold;
+        font-size: 1.5rem;
+        padding-bottom: 1rem;
+        line-height: 2rem;
+        font-size: 1.125rem; }
+        .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p .s1 {
+          text-decoration: line-through;
+          opacity: 50%; }
+      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo:hover {
+        transform: scale(1.08); }
+      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo img {
+        width: 66.6%;
+        height: 12.5rem; }
+      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo span {
+        padding: 0.5rem;
+        line-height: 2rem;
+        font-size: 1.125rem; }
+    .mainindex__sec3 .mainindex__sec3__boton {
+      display: flex;
+      justify-content: center;
+      margin-top: 2.4rem;
+      font-size: 1.5rem;
+      transition: 1s;
+      margin-bottom: -3rem; }
+      .mainindex__sec3 .mainindex__sec3__boton button {
+        border: 0.3rem solid #06283d;
+        background-color: #dff6ff;
+        border-radius: 0.5rem;
+        transition: 1s; }
+        .mainindex__sec3 .mainindex__sec3__boton button:hover {
+          transform: scale(1.08); }
+      .mainindex__sec3 .mainindex__sec3__boton a {
+        display: inline-block;
+        padding: 1rem;
+        text-decoration: none;
+        color: #06283d;
+        letter-spacing: 0.15rem;
+        font-weight: bold;
+        border: 0.3rem solid #bad9e5; }
+    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
+      width: 33.3%; }
   hr {
     margin: 0;
     margin-top: 8rem; }
