--- a/sass/secundarios/_nav.scss
+++ b/sass/secundarios/_nav.scss
@@ -3,18 +3,27 @@
 @import"../utillities/extend";
 @import"../utillities/mixin";
 @import"../utillities/listas";
+
 /* estilos del nav */
 .body header nav {
-    background-color: nth($colores,1);
+    background-color: nth($colores, 1);
     text-align: center;
     height: auto;
     text-transform: uppercase;
-    .boton{
+    .boton {
         background-color: nth($colores, 5);
-        @include sizes($medida-2,$medida-1);
-        border: 2px solid nth($colores, 6);
+        @include sizes(3rem, $medida-2);
+        border: 4px solid nth($colores, 7);
+        &:active{
+            transform: scale(1.2);
+        }
+        img{
+            @include sizes($medida-2, $medida-1);
+            margin-bottom: 0.15rem;
+        }
     }
-    ul li {
+
+    .desk li {
         font-weight: bold;
         padding: $medida-1;
         transition: 1s;
@@ -22,13 +31,34 @@
             text-decoration: underline;
             transform: scale(1.2);
         }
-        #a{
+        #a {
             color: nth($colores, 3);
         }
     }
-    div{
-        a img{
+
+    div {
+        a img {
             @include sizes(8rem, 4rem);
+        }
+    }
+
+    .buscbot {
+        background-color: nth($colores, 1);
+        .buscbot__phone li {
+            font-weight: bold;
+            padding: $medida-3;
+            transition: 1s;
+            &:hover {
+                text-decoration: underline;
+                transform: scale(1.2);
+            }
+            #a {
+                color: nth($colores, 3);
+                img{
+                    @include sizes($medida-2,$medida-2);
+                    margin-right: $medida-3;
+                }
+            }
         }
     }
 }
