--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@
 .body header nav {
   background-color: #47b5ff;
   text-align: center;
-  height: auto;
   text-transform: uppercase; }
   .body header nav .boton {
     background-color: #319fe7;
@@ -190,7 +189,7 @@
   width: 100%; }
   .mainindex .mainindex__sec1 {
     position: absolute;
-    top: 5.6rem;
+    top: 5.65rem;
     left: 0;
     z-index: 1;
     width: 100%; }
@@ -204,14 +203,20 @@
     align-items: center;
     width: 100%;
     z-index: 2;
-    height: 28rem;
+    height: 20rem;
     margin-bottom: 6rem; }
+    .mainindex .mainindex__sec2 img {
+      width: 30%;
+      height: 5rem; }
     .mainindex .mainindex__sec2 p {
       background: -webkit-linear-gradient(#dff6ff, white);
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-size: 1.25rem; }
+      font-size: 1rem;
+      text-align: center;
+      width: 100%;
+      height: 5rem; }
 
 @media screen and (min-width: 576px) {
   .mainindex__sec4 .mainindex__sec4__div1, .mainindex__sec4 .mainindex__sec4__div2, .mainindex__sec4 .mainindex__sec4__div3 {
@@ -277,79 +282,87 @@
   /*estilos del nav*/
   #a {
     font-size: 1rem; }
-  .body header nav {
-    height: 5.8rem; }
+  .body header .nav1 {
+    height: 6rem; }
   .boton {
     display: none; }
   /*estilos de index*/
   .contenedorindex__logo {
     display: none; }
-  .mainindex__sec3 {
-    margin-top: 6rem; }
-    .mainindex__sec3 h1 {
-      text-align: center;
-      padding: 1rem;
-      text-align: center;
-      margin: 3rem;
-      font-size: 4.5rem;
-      text-decoration: underline #319fe7;
-      font-family: Tiemann, serif; }
-    .mainindex__sec3 .mainindex__sec3__contenedorpro {
-      display: flex;
-      justify-content: center;
-      flex-flow: row nowrap; }
-    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
-      padding: 1rem 0rem;
-      margin: 0rem 1rem;
+  .mainindex .mainindex__sec1 {
+    position: absolute;
+    top: 6rem; }
+  .mainindex .mainindex__sec2 {
+    height: 40rem; }
+    .mainindex .mainindex__sec2 p {
+      font-size: 1.25rem; }
+    .mainindex .mainindex__sec2 img {
       width: auto;
-      text-align: center;
-      border: 0.3rem solid #bad9e5;
-      border-radius: 0.5rem;
-      overflow: auto;
-      transition: 1s;
-      margin-top: 2rem; }
-      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p {
-        font-weight: bold;
-        font-size: 1.5rem;
-        padding-bottom: 1rem;
-        line-height: 2rem;
-        font-size: 1.125rem; }
-        .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p .s1 {
-          text-decoration: line-through;
-          opacity: 50%; }
-      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo:hover {
-        transform: scale(1.08); }
-      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo img {
-        width: 66.6%;
-        height: 12.5rem; }
-      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo span {
-        padding: 0.5rem;
-        line-height: 2rem;
-        font-size: 1.125rem; }
-    .mainindex__sec3 .mainindex__sec3__boton {
-      display: flex;
-      justify-content: center;
-      margin-top: 2.4rem;
+      height: auto; }
+  .mainindex__sec3 h1 {
+    text-align: center;
+    padding: 1rem;
+    text-align: center;
+    margin: 3rem;
+    font-size: 4.5rem;
+    text-decoration: underline #319fe7;
+    font-family: Tiemann, serif; }
+  .mainindex__sec3 .mainindex__sec3__contenedorpro {
+    display: flex;
+    justify-content: center;
+    flex-flow: row nowrap; }
+  .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
+    padding: 1rem 0rem;
+    margin: 0rem 1rem;
+    width: auto;
+    text-align: center;
+    border: 0.3rem solid #bad9e5;
+    border-radius: 0.5rem;
+    overflow: auto;
+    transition: 1s;
+    margin-top: 2rem; }
+    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p {
+      font-weight: bold;
       font-size: 1.5rem;
-      transition: 1s;
-      margin-bottom: -3rem; }
-      .mainindex__sec3 .mainindex__sec3__boton button {
-        border: 0.3rem solid #06283d;
-        background-color: #dff6ff;
-        border-radius: 0.5rem;
-        transition: 1s; }
-        .mainindex__sec3 .mainindex__sec3__boton button:hover {
-          transform: scale(1.08); }
-      .mainindex__sec3 .mainindex__sec3__boton a {
-        display: inline-block;
-        padding: 1rem;
-        text-decoration: none;
-        color: #06283d;
-        letter-spacing: 0.15rem;
-        font-weight: bold;
-        border: 0.3rem solid #bad9e5; }
-    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
-      width: 33.3%; }
+      padding-bottom: 1rem;
+      line-height: 2rem;
+      font-size: 1.125rem; }
+      .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p .s1 {
+        text-decoration: line-through;
+        opacity: 50%; }
+    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo:hover {
+      transform: scale(1.08); }
+    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo img {
+      width: 66.6%;
+      height: 12.5rem; }
+    .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo span {
+      padding: 0.5rem;
+      line-height: 2rem;
+      font-size: 1.5rem; }
+  .mainindex__sec3 .mainindex__sec3__boton {
+    display: flex;
+    justify-content: center;
+    margin-top: 2.4rem;
+    font-size: 1.5rem;
+    transition: 1s;
+    margin-bottom: -3rem; }
+    .mainindex__sec3 .mainindex__sec3__boton button {
+      border: 0.3rem solid #06283d;
+      background-color: #dff6ff;
+      border-radius: 0.5rem;
+      transition: 1s; }
+      .mainindex__sec3 .mainindex__sec3__boton button:hover {
+        transform: scale(1.08); }
+    .mainindex__sec3 .mainindex__sec3__boton a {
+      display: inline-block;
+      padding: 1rem;
+      text-decoration: none;
+      color: #06283d;
+      letter-spacing: 0.15rem;
+      font-weight: bold;
+      border: 0.3rem solid #bad9e5; }
+  .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
+    width: 33.3%; }
   hr {
     margin: 0;
     margin-top: 8rem; }
